--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://iampreviero.github.io/my-app",
+  "homepage": "http://iampreviero.github.io/website",
   "name": "website",
   "version": "0.1.0",
   "private": true,
